--- a/src/hello-quad/hello-quad.csproj
+++ b/src/hello-quad/hello-quad.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>HelloSilk.FirstWindow</RootNamespace>
+    <RootNamespace>HelloQuad</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
