--- a/src/hello-texture/hello-texture.csproj
+++ b/src/hello-texture/hello-texture.csproj
@@ -14,6 +14,11 @@
     <PackageReference Include="Silk.NET.Input" Version="2.22.0" />
     <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
+    <PackageReference Include="StbImageSharp" Version="2.30.15" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="silk.png" />
   </ItemGroup>
 
 </Project>
